logs/2024-02-01-16-28/lists/failed/Rdisop
+ Rscript -e 'Sys.setenv(BIOCONDUCTOR_USE_CONTAINER_REPOSITORY=FALSE); p <- .libPaths(); p <- c('\''/tmp/tmp/built'\'', p); .libPaths(p); if(BiocManager::install('\''Rdisop'\'', INSTALL_opts = '\''--build'\'', update = TRUE, quiet = FALSE, dependencies=TRUE, force = TRUE, keep_outputs = TRUE) %in% rownames(installed.packages())) q(status = 0) else q(status = 1)'
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://cloud.r-project.org
Bioconductor version 3.19 (BiocManager 1.30.22), R Under development (unstable)
  (2024-01-23 r85822)
Installing package(s) 'Rdisop'
also installing the dependency ‘RUnit’

trying URL 'https://cloud.r-project.org/src/contrib/RUnit_0.4.32.tar.gz'
Content type 'application/x-gzip' length 337142 bytes (329 KB)
==================================================
downloaded 329 KB

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/Rdisop_1.63.0.tar.gz'
Content type 'application/x-gzip' length 836250 bytes (816 KB)
==================================================
downloaded 816 KB

* installing *source* package ‘RUnit’ ...
** package ‘RUnit’ successfully unpacked and MD5 sums checked
** using staged installation
** R
** inst
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
** building package indices
** installing vignettes
** testing if installed package can be loaded from temporary location
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘RUnit’ as ‘RUnit_0.4.32_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (RUnit)
* installing *source* package ‘Rdisop’ ...
** using staged installation
** libs
using C++ compiler: ‘g++ (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0’
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG  -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include   -I./imslib/src/ -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c disop.cpp -o disop.o
disop.cpp: In instantiation of ‘SEXPREC* rlistScores(std::multimap<score_type, ims::ComposedElement, std::greater<score_type> >, int) [with score_type = double; SEXP = SEXPREC*]’:
disop.cpp:352:20:   required from here
disop.cpp:685:19: error: format not a string literal and no format arguments [-Werror=format-security]
  685 |           Rf_error(exceptionMesg);
      |           ~~~~~~~~^~~~~~~~~~~~~~~
cc1plus: some warnings being treated as errors
make: *** [/usr/local/lib/R/etc/Makeconf:200: disop.o] Error 1
ERROR: compilation failed for package ‘Rdisop’
* removing ‘/tmp/tmp/built/Rdisop’

The downloaded source packages are in
	‘/tmp/Rtmp5G8yhJ/downloaded_packages’
Old packages: 'commonmark', 'httpuv', 'zip'
Warning message:
In install.packages(...) :
  installation of package ‘Rdisop’ had non-zero exit status

real	0m10.534s
user	0m7.720s
sys	0m1.543s
